--- a/res/scat_test.toml
+++ b/res/scat_test.toml
@@ -1,13 +1,12 @@
 [source]
-name = "annulus"
-nphotons = 100000
+name = "focus"
+nphotons = 1000000
 position = [0.0,0.0,0.0]
 spectrum_type = "constant"
 direction = "x"
-beta = 10.0
-rlo = 0.9
-rhi = 1.0
-annulus_type = "gaussian"
+focalLength = 1.0
+beam_size = 0.5
+focus_type = "circle"
 
 [grid]
 nxg = 200
