--- a/res/scat_test.toml
+++ b/res/scat_test.toml
@@ -1,12 +1,11 @@
 [source]
-name = "focus"
+name = "circular"
 nphotons = 1000000
-position = [0.0,0.0,0.0]
+position = [1.0,1.0,1.0]
+radius = 1.0
 spectrum_type = "constant"
-direction = "x"
-focalLength = 1.0
-beam_size = 0.5
-focus_type = "circle"
+direction = "-z"
+
 
 [grid]
 nxg = 200
