Added launch rotation, position and negative focal lengths to annular and focus. Updated config.md to include my changes

--- a/res/scat_test.toml
+++ b/res/scat_test.toml
@@ -1,35 +1,32 @@
 [source]
-name = "circular"
-nphotons = 1000000
-position = [1.0,1.0,1.0]
-radius = 1.0
+name = "pencil"
+nphotons = 100000
+position = [0.0,0.0,1.0]
+rotation = [0.0,0.0,-1.0]
+direction
+focalLength = 1.0
 spectrum_type = "constant"
-direction = "-z"
-
+wavelength = 500.0
 
 [grid]
-nxg = 200
-nyg = 200
-nzg = 200
+nxg = 500
+nyg = 500
+nzg = 500
 xmax = 1.0
 ymax = 1.0
 zmax = 1.0
 
 [geometry]
-geom_name = "sphere"
-boundingBox = [2.0,2.0,2.0]
-sphereRadius = 1.0
-position = [0.0,0.0,0.0]
-numOptProp = 1
-mus = [10.0]
+geom_name = "box"
+BoxDimensions = [2.0,2.0,2.0]
 
 [output]
 fluence = "fluence.nrrd"
 render_geometry_name = "geom_render.nrrd"
-render_geometry = true
+render_geomerty = true
 render_source_name = "source_render.nrrd"
 render_source = true
-render_size = [250,250,250]
+render_size = [200,200,200]
 overwrite = true
 
 [simulation]
