--- a/res/validation1.toml
+++ b/res/validation1.toml
@@ -28,7 +28,7 @@ n = [1.0]
 type="circle"
 position=[0.0, 0.0, -0.011]
 direction=[0.0, 0.0, -1.0]
-radius1=20
+radius=20
 nbins=100
 maxval = 1.0
 trackHistory=false
@@ -37,7 +37,7 @@ trackHistory=false
 type="circle"
 position=[0.0, 0.0, 0.011]
 direction=[0.0, 0.0, 1.0]
-radius1=20
+radius=20
 nbins=100
 maxval = 1.0
 trackHistory=false
