Updated unit tests where code sections being tested had been changed

--- a/res/test_dects.toml
+++ b/res/test_dects.toml
@@ -18,7 +18,7 @@ type="circle"
 position=[-1.0, 0.0, 0.0]
 direction=[-1.0, 0.0, 0.0]
 layer=4
-radius1=0.5
+radius=0.5
 nbins=10
 maxval = 5000.0
 trackHistory=false
