--- a/res/default.toml
+++ b/res/default.toml
@@ -22,9 +22,11 @@ mus = [210]
 hgg = [0.9]
 mua = [0.23]
 n = [1.38]
+symmetry = "none"
 
 [[detectors]]
 type="fibre"
+ID = "1"
 position=[0.0, 0.0, 2.0]
 direction=[0.0, 0.0, 1.0]
 focalLength1 = 2.0
@@ -42,6 +44,7 @@ trackHistory = false
 
 [[detectors]]
 type="fibre"
+ID = "2"
 position=[0.0, 0.0, 2.0]
 direction=[0.0, 0.0, 1.0]
 focalLength1 = 2.0
@@ -59,6 +62,7 @@ trackHistory = false
 
 [[detectors]]
 type="fibre"
+ID = "3"
 position=[0.0, 0.0, 2.0]
 direction=[0.0, 0.0, 1.0]
 focalLength1 = 2.0
@@ -76,6 +80,7 @@ trackHistory = false
 
 [[detectors]]
 type="fibre"
+ID = "4"
 position=[0.0, 0.0, 2.0]
 direction=[0.0, 0.0, 1.0]
 focalLength1 = 2.0
@@ -93,6 +98,7 @@ trackHistory = false
 
 [[detectors]]
 type="fibre"
+ID = "5"
 position=[0.0, 0.0, 2.0]
 direction=[0.0, 0.0, 1.0]
 focalLength1 = 2.0
@@ -110,6 +116,7 @@ trackHistory = false
 
 [[detectors]]
 type="fibre"
+ID = "6"
 position=[0.0, 0.0, 2.0]
 direction=[0.0, 0.0, 1.0]
 focalLength1 = 2.0
@@ -127,6 +134,7 @@ trackHistory = false
 
 [[detectors]]
 type="fibre"
+ID = "7"
 position=[0.0, 0.0, 2.0]
 direction=[0.0, 0.0, 1.0]
 focalLength1 = 2.0
@@ -144,6 +152,7 @@ trackHistory = false
 
 [[detectors]]
 type="fibre"
+ID = "8"
 position=[0.0, 0.0, 2.0]
 direction=[0.0, 0.0, 1.0]
 focalLength1 = 2.0
@@ -161,6 +170,7 @@ trackHistory = false
 
 [[detectors]]
 type="fibre"
+ID = "9"
 position=[0.0, 0.0, 2.0]
 direction=[0.0, 0.0, 1.0]
 focalLength1 = 2.0
@@ -178,6 +188,7 @@ trackHistory = false
 
 [[detectors]]
 type="fibre"
+ID = "10"
 position=[0.0, 0.0, 2.0]
 direction=[0.0, 0.0, 1.0]
 focalLength1 = 2.0
