Added cylindrical grid system to grid.f90 to be used with escape function symmetry. Added symmetry parse function only used when compiling to run the escape function. Begun work on interpolating between a shifted, rotated and resized cartesian grid with the main cartesian grid

--- a/res/default.toml
+++ b/res/default.toml
@@ -22,7 +22,11 @@ mus = [210]
 hgg = [0.9]
 mua = [0.23]
 n = [1.38]
-symmetry = "none"
+
+[symmetry]
+symmetryType = "none"
+GridSize = [5,5,5]
+maxValues = [4.0, 5.0, 5.0]
 
 [[detectors]]
 type="fibre"
