--- a/res/egg_test.toml
+++ b/res/egg_test.toml
@@ -9,14 +9,14 @@ wavelength = 500.0
 nxg = 500
 nyg = 500
 nzg = 500
-xmax = 5.0
-ymax = 5.0
-zmax = 5.0
+xmax = 2.5
+ymax = 2.5
+zmax = 2.5
 
 [geometry]
 geom_name = "egg"
 numOptProp = 3
-boundingBox = [15.0,15.0,15.0]
+boundingBox = [5.0,5.0,5.0]
 position = [0.0,0.0,0.0]
 BottomSphereRadius = 2.0
 TopSphereRadius = 1.5
@@ -27,7 +27,7 @@ YolkRadius = 1.0
 [output]
 fluence = "fluence.nrrd"
 render_geometry_name = "geom_render.nrrd"
-render_geometry = false
+render_geometry = true
 render_source_name = "source_render.nrrd"
 render_source = true
 render_size = [250,250,250]
