--- a/res/validation1.toml
+++ b/res/validation1.toml
@@ -27,7 +27,7 @@ n = [1.0]
 [[detectors]]
 type="circle"
 ID = "this is a test"
-position=[0.0, 0.0, -0.011]
+position=[0.0, 0.0, -0.01]
 direction=[0.0, 0.0, -1.0]
 radius=20
 nbins=100
@@ -37,7 +37,7 @@ trackHistory=false
 [[detectors]]
 type="circle"
 ID = "1"
-position=[0.0, 0.0, 0.011]
+position=[0.0, 0.0, 0.01]
 direction=[0.0, 0.0, 1.0]
 radius=20
 nbins=100
@@ -47,7 +47,7 @@ trackHistory=false
 [output]
 fluence = "fluence.nrrd"
 render_geometry_name = "geom_render.nrrd"
-render_geomerty = true
+render_geometry = true
 render_source_name = "source_render.nrrd"
 render_source = true
 render_size = [200,200,200]
