--- a/res/validation2.toml
+++ b/res/validation2.toml
@@ -29,7 +29,7 @@ n = [1.38]
 [output]
 fluence = "fluence.nrrd"
 render_geometry_name = "geom_render.nrrd"
-render_geomerty = true
+render_geometry = true
 render_source_name = "source_render.nrrd"
 render_source = true
 render_size = [200,200,200]
